# Weather-Assistant-Zephyr

./: .gitignore  CMakeLists.txt  prj.conf  readme.md
boards/: b_l4s5i_iot01a.conf  b_l4s5i_iot01a.overlay
src/: display_fsm.c  display_fsm.h  main.c  open_meteo_http.c  open_meteo_http.h  wifi.c  wifi.h
